use max-width to fix horizontal scrollbar

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -92,7 +92,8 @@ img {
 .btn {
     text-decoration: none;
     color: #fff;
-    background: rgba(0,0,0, 0.3);
+    background-color: #000000;
+    background-color: rgba(0,0,0, 0.3);
     display: inline-block;
     margin-bottom: 0;
     font-weight: normal;
@@ -117,7 +118,7 @@ img {
 .btn:hover, .btn:active {
     text-decoration: none;
     color: #fff;
-    background: #0059b3;
+    background-color: #0059b3;
     -moz-box-shadow: 0 2px 2px #999;
     box-shadow: 0 2px 2px #999;
     box-shadow: 0 2px 2px rgba(0,0,0,0.5);
@@ -167,7 +168,7 @@ img {
 }
 
 .header{
-    background: #9dc6e8;
+    background-color: #9dc6e8;
     background-image: url("../img/bg.jpg");
     background-size: cover;
     text-shadow: 0px 0px 20px rgba(255,255,255,0.8), 0px 1px 0px rgba(255,255,255,0.5);
